--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,7 +56,7 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+#logger.memcached=DEBUG
 
-ehcacheplugin=true
-memcached.host="192.168.1.3:11211"
-
+ehcacheplugin=false
+memcached.host="192.168.1.100:11211"
