--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,5 +58,5 @@ logger.play=INFO
 logger.application=DEBUG
 #logger.memcached=DEBUG
 
-ehcacheplugin=false
+ehcacheplugin=true
 memcached.host="192.168.1.100:11211"
